--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "MyTasks",
+  "name": "my_tasks",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "author": "João Gustavo Soares Bispo <jgbispo20@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1"
   },
